Урок 5. По клику на пользователя открывается фрагмент с аватаркой пользователя и списком его репозиториев. По клику на репозитрий рядом с аватаркой отображается дата создания репозитория и количество форков

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Users">USERS</string>
     <string name="repos">REPOS</string>
+    <string name="created_date">created date</string>
+    <string name="forks">forks</string>
 </resources>
